syntax = "proto3";
package authentication;

service Authentication {
    rpc signUp (SignupRequest) returns (SignupResponse);
    rpc login (LoginRequest) returns (LoginResponse);
    rpc logout (LogoutRequest) returns (LogoutResponse);
}

message SignupRequest {
    string username = 1;
    string password = 2;
    string firstName = 3;
    string lastName = 4;
}

message SignupResponse {
    string message = 1;
}

message LoginRequest {
    string message = 1;
    string password = 2;
}

message LoginResponse {
    string status = 1;
    string token = 2;
}

message LogoutRequest {
    string token = 1;
}

message LogoutResponse {
    string message = 1;
}
